# tauri-hotkey-rs

./: Cargo.toml
src/: lib.rs
